--- a/src/SignManagement/SignManagement.css
+++ b/src/SignManagement/SignManagement.css
@@ -8,9 +8,13 @@
     height: border-box;
     font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
     color: white;
+    width: 100%;
 
 }
 
+.row,.col{
+    width: 100%;
+}
 /*All buttons (sign and submit)*/
 #button-container {
     display: flex;
@@ -42,7 +46,7 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    height:90vh;
+    height: 90vh;
     width: 90vh;
     animation: App-logo-spin2 linear;
     animation-iteration-count: 1;
@@ -66,5 +70,23 @@
     }
     to {
         transform: translateX(-100%);
+    }
+}
+
+/*only in Large devices*/
+@media all and (max-width: 992px) {
+    #info {
+        display: none;
+    }
+
+    /*Animation*/
+    .slide-animation {
+        animation: none;
+
+    }
+
+    .slide-animation2 {
+        animation: none;
+
     }
 }
